[package]
name = "pretty-bad-privacy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
"cbc" = { version = "0.1.2", features = [ "alloc", "block-padding", "zeroize" ] }
"aes-gcm" = { version = "0.10.2", features = [ "zeroize" ]}